After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 594500 - timeout of password dialog
timeout of password dialog
Status: RESOLVED FIXED
Product: gvfs
Classification: Core
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gvfs-maint
gvfs-maint
Depends on:
Blocks:
 
 
Reported: 2009-09-08 14:16 UTC by Matthias Clasen
Modified: 2015-03-11 23:17 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
common: Increase mount timeout to 30 minutes (1.26 KB, patch)
2015-03-08 21:58 UTC, Ross Lagerwall
none Details | Review
common: Increase mount timeout to 30 minutes (4.24 KB, patch)
2015-03-10 20:43 UTC, Ross Lagerwall
committed Details | Review

Description Matthias Clasen 2009-09-08 14:16:46 UTC
When I try to connect to a password-protected dav share (that was exported via gnome-user-share), I get a password dialog. That is fine. But if I leave the password dialog untouched for a few minutes, I get an error dialog, that says

Unable to mount location
DBus error org.freedesktop.DBus.Error.NoReply: Message did not receive a reply (timeout by message bus)


That is not very friendly. If you show a password dialog, you should be prepared for it to stay open for a while. And if you really can't just keep waiting, a better way to handle the timeout would be to just remove the password dialog (and MAYBE show a nice message that explains the timeout)
Comment 1 Matthias Clasen 2009-09-08 14:18:36 UTC
Another big problem with the error dialog is that the grab of the password dialog prevents me from clicking its ok button.
Comment 2 Ross Lagerwall 2015-03-08 21:58:00 UTC
Created attachment 298832 [details] [review]
common: Increase mount timeout to 30 minutes

Although it is probably unnecessary, wait up to 30 minutes for a mount
to complete.  This allows plenty of time to wait for a password dialog.
It also makes it more consistent with many of the other operations which
use a timeout of 30 minutes.
Comment 3 Ross Lagerwall 2015-03-08 21:58:47 UTC
The error message shown when the timeout occurs is: "Timeout was reached" which I think is OK.
Comment 4 Ondrej Holy 2015-03-09 12:28:25 UTC
Review of attachment 298832 [details] [review]:

Agree that it is good idea to unify those timeouts across gvfs, but why not use this macro also for g_dbus_proxy_set_default_timeout calls in gmountsource...
Comment 5 Ondrej Holy 2015-03-09 12:28:28 UTC
Review of attachment 298832 [details] [review]:

Agree that it is good idea to unify those timeouts across gvfs, but why not use this macro also for g_dbus_proxy_set_default_timeout calls in gmountsource...
Comment 6 Ross Lagerwall 2015-03-10 20:43:35 UTC
Created attachment 299053 [details] [review]
common: Increase mount timeout to 30 minutes

Although it is probably unnecessary, wait up to 30 minutes for a mount
to complete.  This allows plenty of time to wait for a password dialog.
It also makes it more consistent with many of the other operations which
use a timeout of 30 minutes.
Comment 7 Ondrej Holy 2015-03-11 09:25:06 UTC
Review of attachment 299053 [details] [review]:

Looks good, thanks!
Comment 8 Ross Lagerwall 2015-03-11 23:17:32 UTC
Comment on attachment 299053 [details] [review]
common: Increase mount timeout to 30 minutes

Pushed to master as c0bd3138a60b2a389ac99540ac3bfecb700ef0ff. Thanks for the review.