common: Increase mount timeout to 30 minutes

Although it is probably unnecessary, wait up to 30 minutes for a mount
to complete.  This allows plenty of time to wait for a password dialog.
It also makes it more consistent with many of the other operations which
use a timeout of 30 minutes.

https://bugzilla.gnome.org/show_bug.cgi?id=594500